--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -3,12 +3,13 @@
     <div class="logo">
       <a href="https://scorecarts.com/"><img src="./../../assets/images/White _SCROCARTS_ LOGO.png" alt=""
           style="width: 200px;" /></a>
-      <h1 class="set-color">Welcome</h1>
+          <h1 class="customise-color">Welcome to scorecarts...</h1>
     </div>
     <div id="mainListDiv" class="main_list">
-      <i class="fa fa-sign-out customise-color" (click)="logout()" aria-hidden="true"></i>
+      <i class="fa fa-sign-out customise-color" (click)="logout()" aria-hidden="true">Logout</i>
     </div>
   </div>
 </nav>
 <section class="home">
+    
 </section>
